del: unused binary

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,9 @@ endif()
 # -fPIC
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
+# generate compile_commands.json
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 # ROOT 6 installation
 list(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})
 
@@ -83,4 +86,12 @@ add_custom_command(
     COMMENT "Uninstall files with install_manifest.txt"
     COMMAND xargs rm -vf < install_manifest.txt || echo Nothing in
             install_manifest.txt to be uninstalled!
+)
+
+add_custom_target(copy-compile-commands ALL
+  COMMAND ${CMAKE_COMMAND} -E copy_if_different
+    ${CMAKE_BINARY_DIR}/compile_commands.json
+    ${CMAKE_SOURCE_DIR}/compile_commands.json
+  DEPENDS ${CMAKE_BINARY_DIR}/compile_commands.json
+  COMMENT "Copying compile_commands.json to root directory"
 )
