--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,8 +53,8 @@ function(SRIMbin bin_name)
 endfunction()
 
 SRIMbin(allinfo)
-SRIMbin(eloss)
-SRIMbin(newe)
-SRIMbin(olde)
-SRIMbin(range)
-SRIMbin(straggling)
+#SRIMbin(eloss)
+#SRIMbin(newe)
+#SRIMbin(olde)
+#SRIMbin(range)
+#SRIMbin(straggling)
